--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Tarek Bouzo</title>
   </head>
   <body>
-    <h1> Hello, my name is Tarek </h1>
+    <h1> Hello, Code school!</h1>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JAVASCRIPT</li>
+    </ul>
   </body>
 </html>
